--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 15 Pro'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
@@ -17,7 +17,8 @@
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "react-native-webp-format": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
