--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -112,6 +112,9 @@ dependencies {
     implementation 'com.facebook.fresco:webpsupport:2.5.0'
     implementation 'com.facebook.fresco:animated-webp:2.5.0'
 
+    // Google analytics
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
+
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
@@ -119,4 +122,5 @@ dependencies {
     }
 }
 
+apply plugin: 'com.google.gms.google-services'
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
