--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,12 @@ buildscript {
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.22"
+
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
+
+        // Other settings
+        supportLibVersion = "23.1.1" // default: 23.1.1
     }
     repositories {
         google()
@@ -15,6 +21,7 @@ buildscript {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        classpath('com.google.gms:google-services:4.3.3')
     }
 }
 
