--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-push-notification": "^8.1.1",
