--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios --simulator='iPhone 15 Pro'",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "test": "jest"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/messaging": "^19.2.2",
     "@react-native-masked-view/masked-view": "^0.3.1",
@@ -25,10 +26,10 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-push-notification": "^8.1.1",
-    "react-native-reanimated": "^3.11.0",
+    "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-webp-format": "^1.2.0"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -40,6 +41,7 @@
     "@react-native/typescript-config": "0.74.83",
     "@types/react": "^18.2.6",
     "@types/react-native-push-notification": "^8.1.4",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
