--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
 
         // Other settings
-        supportLibVersion = "23.1.1" // default: 23.1.1
+        supportLibVersion = "28.0.0"
     }
     repositories {
         google()
