--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/messaging": "^19.2.2",
@@ -20,8 +21,10 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "moment": "^2.30.1",
+    "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-device-info": "^13.0.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
