--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
         // Other settings
         supportLibVersion = "28.0.0"
+        googlePlayServicesAuthVersion = "20.7.0"
     }
     repositories {
         google()
@@ -22,6 +23,7 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
         classpath('com.google.gms:google-services:4.3.3')
+        classpath 'com.google.gms:google-services:4.4.0'
     }
 }
 
