--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -2,18 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>722704378686-31ct4s833n4ctcm1b121khfjakv5de7b.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.722704378686-31ct4s833n4ctcm1b121khfjakv5de7b</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDBIDE0-o8PiYhVbT4xgPCF-vEaooUyIVY</string>
+	<string>AIzaSyCBqEExymKalmHNwAVDTqM0GOVjAIWP5oo</string>
 	<key>GCM_SENDER_ID</key>
-	<string>44288826863</string>
+	<string>722704378686</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.daemon.chatapp</string>
 	<key>PROJECT_ID</key>
-	<string>mobilechatapp-e6473</string>
+	<string>mobileappchatfb</string>
 	<key>STORAGE_BUCKET</key>
-	<string>mobilechatapp-e6473.appspot.com</string>
+	<string>mobileappchatfb.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:44288826863:ios:008322d50b60c1c2f0aa1a</string>
+	<string>1:722704378686:ios:f096cec10d21e71fa5da6f</string>
 </dict>
 </plist>
