--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator='iPhone 15 Pro'",
+    "android:clean": "cd android && ./gradlew clean && cd ..",
+    "ios": "react-native run-ios --simulator='iPhone 16 Pro'",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
     "test": "jest"
@@ -15,11 +16,14 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/auth": "^19.2.2",
     "@react-native-firebase/messaging": "^19.2.2",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
+    "cheerio-without-node-native": "0.20.2",
     "moment": "^2.30.1",
     "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
@@ -28,11 +32,14 @@
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-vector-icons": "^10.1.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
