--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "android": "react-native run-android",
     "android:clean": "cd android && ./gradlew clean && cd ..",
-    "ios": "react-native run-ios --simulator='iPhone 16 Pro'",
+    "ios-simulator": "react-native run-ios --simulator='iPhone 16 Pro'",
+    "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
     "test": "jest"
