--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "cheerio-without-node-native": "0.20.2",
+    "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
     "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
