--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
     "pusher-js": "^8.4.0-rc2",
-    "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react": "^18.3.1",
+    "react-native": "^0.79.3",
     "react-native-device-info": "^13.0.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.16.2",
@@ -48,6 +48,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "latest",
     "@react-native/babel-preset": "0.74.83",
     "@react-native/eslint-config": "0.74.83",
     "@react-native/metro-config": "0.74.83",
